--- a/watcher/watcher-bootstrap/deploy/sandbox/node1/deployment.yaml
+++ b/watcher/watcher-bootstrap/deploy/sandbox/node1/deployment.yaml
@@ -108,7 +108,7 @@ spec:
           - name: "watcher.notify.template"
             value: RINKEBY
           - name: "watcher.scan.switch"
-            value: true
+            value: false
           - name: "watcher.process.concurrent.switch"
             value: true
           - name: "watcher.process.only.evmplugin"
@@ -116,7 +116,7 @@ spec:
           - name: "watcher.bridge.contract.address"
             value: "0xf62B76556f86503C9986F25D3DC59CC538f50f51"
           - name: "watcher.monitor.cron"
-            value: "0 */1 * * * ?"
+            value: "0 0 12 * * ?"
       volumes:
       - name: host-time
         hostPath:
