--- a/watcher/watcher-bootstrap/deploy/sandbox/node2/deployment.yaml
+++ b/watcher/watcher-bootstrap/deploy/sandbox/node2/deployment.yaml
@@ -94,7 +94,8 @@ spec:
                 name: network-config
                 key: ether.rpc.api
           - name: "watcher.vmChainUrl"
-            value: https://eth-rinkeby.alchemyapi.io/v2/Wh0cFuopX8Z3xC_hMpE9vgQVwDbOrFS2
+#            value: https://eth-rinkeby.alchemyapi.io/v2/Wh0cFuopX8Z3xC_hMpE9vgQVwDbOrFS2
+            value: http://ethereum-client-sandbox.chain-sandbox.svc.cluster.local:8545
           - name: "watcher.chain.scanStep"
             value: 200
           - name: "watcher.chain.processStep"
