--- a/watcher/watcher-bootstrap/deploy/sandbox/node1/deployment.yaml
+++ b/watcher/watcher-bootstrap/deploy/sandbox/node1/deployment.yaml
@@ -96,7 +96,7 @@ spec:
           - name: "watcher.vmChainUrl"
             value: http://ethereum-client-sandbox.chain-sandbox.svc.cluster.local:8545
           - name: "watcher.chain.scanStep"
-            value: 200
+            value: 50
           - name: "watcher.chain.processStep"
             value: 200
           - name: "watcher.chain.chainId"
@@ -110,7 +110,7 @@ spec:
           - name: "watcher.scan.switch"
             value: false
           - name: "watcher.process.concurrent.switch"
-            value: true
+            value: false
           - name: "watcher.process.only.evmplugin"
             value: true
           - name: "watcher.bridge.contract.address"
