--- a/watcher/watcher-bootstrap/deploy/sandbox/node0/deployment.yaml
+++ b/watcher/watcher-bootstrap/deploy/sandbox/node0/deployment.yaml
@@ -133,6 +133,8 @@ spec:
             value: false
           - name: "watcher.bridge.contract.address"
             value: "0xb382f247ef75878cac13c8a8b63816249b43f4b9"
+          - name: "watcher.nft.auction.address"
+            value: "0xb382f247ef75878cac13c8a8b63816249b43f4b9"
           - name: "watcher.monitor.cron"
             value: "0 */1 * * * ?"
       volumes:
