--- a/watcher/watcher-bootstrap/pom.xml
+++ b/watcher/watcher-bootstrap/pom.xml
@@ -66,6 +66,13 @@
             <artifactId>watcher-plugin-evm</artifactId>
             <version>1.0.0-SNAPSHOT</version>
         </dependency>
+
+        <dependency>
+            <groupId>ai.everylink.chainscan</groupId>
+            <artifactId>watcher-plugin-nft-auction</artifactId>
+            <version>1.0.0-SNAPSHOT</version>
+        </dependency>
+
         <dependency>
             <groupId>ai.everylink.chainscan</groupId>
             <artifactId>watcher-plugin-transaction-history</artifactId>
