--- a/watcher/watcher-bootstrap/deploy/production/node/deployment.yaml
+++ b/watcher/watcher-bootstrap/deploy/production/node/deployment.yaml
@@ -127,6 +127,8 @@ spec:
             value: false
           - name: "watcher.monitor.cron"
             value: "0 */1 * * * ?"
+          - name: "watcher.monitor.threshold"
+            value: "10"
           - name: "watcher.bridge.contract.address"
             value: "0xb382f247ef75878cac13c8a8b63816249b43f4b9"
       volumes:
