增加tx插件耗时分析;

--- a/watcher/watcher-plugin/watcher-plugin-evm/src/main/resources/application.properties
+++ b/watcher/watcher-plugin/watcher-plugin-evm/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 # environment
-spring.datasource.chainscan.jdbc-url=jdbc:mysql://rinkeby-mysql8.database.svc.cluster.local:3306/chainscan_rinkeby?characterEncoding=utf-8&serverTimezone=UTC&useSSL=false
+spring.datasource.chainscan.jdbc-url=jdbc:mysql://exchange-mysql5-7.database.svc.cluster.local:3306/chainscan?characterEncoding=utf-8&serverTimezone=UTC&useSSL=false
 spring.datasource.chainscan.username=root
 spring.datasource.chainscan.password=ZxcvAsdf
 evm.chain.scanStep=100
