--- a/watcher/watcher-bootstrap/deploy/sandbox/node-dtx/service.yaml
+++ b/watcher/watcher-bootstrap/deploy/sandbox/node-dtx/service.yaml
@@ -1,17 +1,17 @@
-apiVersion: v1
-kind: Service
-metadata:
-  name: $APP_NAME-dtx-sandbox
-  namespace: paas
-spec:
-  ports:
-  - name: http
-    port: 9196
-    targetPort: 9196
-    protocol: TCP
-#    nodePort: 41296
-  selector:
-    app: $APP_NAME-dtx-sandbox
-  sessionAffinity: None
-#  type: NodePort
-  type: ClusterIP
+#apiVersion: v1
+#kind: Service
+#metadata:
+#  name: $APP_NAME-dtx-sandbox
+#  namespace: paas
+#spec:
+#  ports:
+#  - name: http
+#    port: 9196
+#    targetPort: 9196
+#    protocol: TCP
+##    nodePort: 41296
+#  selector:
+#    app: $APP_NAME-dtx-sandbox
+#  sessionAffinity: None
+##  type: NodePort
+#  type: ClusterIP
