--- a/watcher/watcher-bootstrap/deploy/sandbox/node-dtx/deployment.yaml
+++ b/watcher/watcher-bootstrap/deploy/sandbox/node-dtx/deployment.yaml
@@ -122,7 +122,7 @@ spec:
             valueFrom:
               configMapKeyRef:
                 name: watcher-config
-                key: dtx.chain-id
+                key: dtx-chain-id
           - name: "watcher.chain.chainType"
             value: EVM_PoS
           - name: "watcher.notify.template"
