修改bridge 状态不对的问题

--- a/watcher/watcher-bootstrap/deploy/production/node/deployment.yaml
+++ b/watcher/watcher-bootstrap/deploy/production/node/deployment.yaml
@@ -136,7 +136,7 @@ spec:
             valueFrom:
               configMapKeyRef:
                 name: watcher-config
-                key: bridge-contract-address
+                key: dtx-bridge-contract-address
       volumes:
       - name: host-time
         hostPath:
