--- a/watcher/watcher-bootstrap/deploy/sandbox/node-dtx/deployment.yaml
+++ b/watcher/watcher-bootstrap/deploy/sandbox/node-dtx/deployment.yaml
@@ -137,7 +137,7 @@ spec:
             valueFrom:
               configMapKeyRef:
                 name: watcher-config
-                key: bridge-contract-address
+                key: dtx-bridge-contract-address
           - name: "watcher.nft.auction.address"
             valueFrom:
               configMapKeyRef:
