--- a/watcher/watcher-bootstrap/src/main/resources/application-prd.yml
+++ b/watcher/watcher-bootstrap/src/main/resources/application-prd.yml
@@ -54,3 +54,10 @@ watcher:
   bridge:
     contract:
       address: "0xb382f247ef75878cac13c8a8b63816249b43f4b9"
+ai.everylink.chainscan.watcher.plugin:
+  EvmWatcher: 4,97
+  ChainMonitorWatcher: 4.97
+  NFTAuctionSpiPlugin: 97
+  TokenSpiPlugin: 97
+  TokenWatcher: 97
+  TransactionHistorySpiPlugin: 4,97
