--- a/watcher/watcher-plugin/watcher-plugin-evm/src/main/resources/application.properties
+++ b/watcher/watcher-plugin/watcher-plugin-evm/src/main/resources/application.properties
@@ -1,12 +1,13 @@
 # environment
-spring.datasource.chainscan.jdbc-url=jdbc:mysql://exchange-mysql5-7.database.svc.cluster.local:3306/chainscan?characterEncoding=utf-8&serverTimezone=UTC&useSSL=false
+spring.datasource.chainscan.jdbc-url=jdbc:mysql://rinkeby-mysql8.database.svc.cluster.local:3306/chainscan_rinkeby_test?characterEncoding=utf-8&serverTimezone=UTC&useSSL=false
 spring.datasource.chainscan.username=root
 spring.datasource.chainscan.password=ZxcvAsdf
 evm.chain.scanStep=1
 evm.chain.processStep=1
-evm.chain.chainId=97
+evm.chain.chainId=4
 evm.chain.chainType=EVM_PoS
-evm.chain.chainRpcUrl=http://vmtest.infra.powx.io/v1/72f3a83ea86b41b191264bd16cbac2bf
+#evm.chain.chainRpcUrl=http://vmtest.infra.powx.io/v1/72f3a83ea86b41b191264bd16cbac2bf
+evm.chain.chainRpcUrl=http://ethereum-client-sandbox.chain-sandbox.svc.cluster.local:8545
 
 evm.chain.rocketmqSrvAddr=rocketmq-namesrv.database.svc.cluster.local:9876
 
@@ -30,6 +31,8 @@ spring.datasource.hikari.maximum-pool-size=200
 spring.datasource.hikari.minimum-idle=20
 spring.datasource.hikari.max-lifetime=600000
 spring.datasource.hikari.idle-timeout=600000
+
+start.block.number=1000000
 
 
 
