--- a/watcher/watcher-bootstrap/deploy/production/node-rinkeby/deployment.yaml
+++ b/watcher/watcher-bootstrap/deploy/production/node-rinkeby/deployment.yaml
@@ -92,7 +92,10 @@ spec:
                 name: network-config
                 key: dtx.rpc.api
           - name: "watcher.vmChainUrl"
-            value: "http://ethereum-client-sandbox.chain-sandbox.svc.cluster.local:8545"
+            valueFrom:
+              configMapKeyRef:
+                name: network-config
+                key: eth.rpc.api
           - name: "watcher.chain.scanStep"
             value: 1
           - name: "watcher.chain.chainId"
