修改可以指定某个区块运行

--- a/watcher/watcher-bootstrap/deploy/production/node-rinkeby/deployment.yaml
+++ b/watcher/watcher-bootstrap/deploy/production/node-rinkeby/deployment.yaml
@@ -43,7 +43,7 @@ spec:
         - containerPort: 9196
         env:
           - name: "spring.profiles.active"
-            value: "test"
+            value: "prd"
           - name: TZ
             value: UTC
           - name: "evm.chain.rinkebyUrl"
