--- a/watcher/watcher-bootstrap/deploy/production/node-rinkeby/deployment.yaml
+++ b/watcher/watcher-bootstrap/deploy/production/node-rinkeby/deployment.yaml
@@ -71,6 +71,21 @@ spec:
               secretKeyRef:
                 name: database-rinkeby
                 key: password
+          - name: "spring.datasource.wallet.jdbc-url"
+            valueFrom:
+              secretKeyRef:
+                name: database-wallet
+                key: wallet-url
+          - name: "spring.datasource.wallet.username"
+            valueFrom:
+              secretKeyRef:
+                name: database-wallet
+                key: wallet-username
+          - name: "spring.datasource.wallet.password"
+            valueFrom:
+              secretKeyRef:
+                name: database-wallet
+                key: wallet-password
           - name: "watcher.rocketmq.server.addr"
             valueFrom:
               configMapKeyRef:
