不报错tx数据

--- a/watcher/watcher-bootstrap/deploy/production/node-rinkeby/deployment.yaml
+++ b/watcher/watcher-bootstrap/deploy/production/node-rinkeby/deployment.yaml
@@ -115,6 +115,8 @@ spec:
             value: 1
           - name: "watcher.chain.chainId"
             value: 4
+          - name: "watcher.insert.transaction.log"
+            value: false
           - name: "watcher.chain.chainType"
             value: EVM_PoW
           - name: "watcher.notify.template"
